--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -47,11 +47,11 @@
 
             {% for post in posts %}
                 <article>
-                    <time>published: {{ post.published_date }}</time>
                     <h2><a href = "">{{ post.title }}</a></h2>
                     <p>{{ post.text|linebreaksbr }}</p>
+                    <time>published: {{ post.published_date }}</time>
                 </article>
-                {{ post }}
+                <!-- {{ post }} -->
             {% endfor %}
 
 			
