--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,6 +7,7 @@
         <meta name = "viewport" content = "width=device-width, initial-scale=1, user-scalable=1" />
         <meta name = "description" content = "Test Django blog" />
         <meta name = "author" content = "Tracy Hockenhull" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static '/css/blog.css' %}">
         
@@ -22,7 +23,7 @@
 
     <body>
 
-        <header>
+        <header class = "page-header">
 
             <img class = "logo" src = "{% static 'media\pexels-anni-roenkae-5278835 banner.jpg' %}" alt = "Profile photo" />
 
@@ -43,18 +44,24 @@
 
 		</header>
 
-		<main>
+		<main class = "container">
 
-            {% for post in posts %}
-                <article>
-                    <h2><a href = "">{{ post.title }}</a></h2>
-                    <p>{{ post.text|linebreaksbr }}</p>
-                    <time>published: {{ post.published_date }}</time>
-                </article>
-                <!-- {{ post }} -->
-            {% endfor %}
+            <div class = "row">
 
-			
+                <div class = "col">
+
+                    {% for post in posts %}
+                        <article class = "post">
+                            <h2><a href = "">{{ post.title }}</a></h2>
+                            <p>{{ post.text|linebreaksbr }}</p>
+                            <time>published: {{ post.published_date }}</time>
+                        </article>
+                    {% endfor %}
+
+                </div>
+
+            </div>
+
 		</main>
 
 		<footer>
