--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,8 +8,8 @@
         <meta name = "description" content = "Test Django blog" />
         <meta name = "author" content = "Tracy Hockenhull" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext">
-        <link rel="stylesheet" type = "text/css" href="{% static '/css/blog.css' %}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" type = "text/css" href="{% static '/css/blog.css' %}">
                 
         <!-- FAVICON -->
 
@@ -29,16 +29,20 @@
 
 			<nav>
 
-                 <h1><a href="/">Test Django Blog</a></h1>
+                <div class = "container">
 
-				 <!-- Add # in front of link definitions for same-page nav links. -->
-				<ul>
-					<li><a href = "index.html">Home</a></li>
-					<li><a href = "#about">About</a></li>
-					<li><a href = "#services">Services</a></li>
-					<li><a href = "#news">News</a></li>
-					<li><a href = "#contact">Contact</a></li>
-				</ul>
+                    <h1><a href="/">Test Django Blog</a></h1>
+
+                    <!-- Add # in front of link definitions for same-page nav links. -->
+                    <ul>
+                        <li><a href = "index.html">Home</a></li>
+                        <li><a href = "#about">About</a></li>
+                        <li><a href = "#services">Services</a></li>
+                        <li><a href = "#news">News</a></li>
+                        <li><a href = "#contact">Contact</a></li>
+                    </ul>
+                    
+                </div>
 
 			</nav>
 
@@ -50,13 +54,9 @@
 
                 <div class = "col">
 
-                    {% for post in posts %}
-                        <article class = "post">
-                            <h2><a href = "">{{ post.title }}</a></h2>
-                            <p>{{ post.text|linebreaksbr }}</p>
-                            <time>published: {{ post.published_date }}</time>
-                        </article>
-                    {% endfor %}
+                    {% block content %}
+                        
+                    {% endblock %}
 
                 </div>
 
