--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,72 +1,12 @@
-{% load static %}
+{% extends 'blog/base.html' %}
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset = "utf-8" />
-        <meta name = "viewport" content = "width=device-width, initial-scale=1, user-scalable=1" />
-        <meta name = "description" content = "Test Django blog" />
-        <meta name = "author" content = "Tracy Hockenhull" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext">
-        <link rel="stylesheet" type = "text/css" href="{% static '/css/blog.css' %}">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-                
-        <!-- FAVICON -->
-
-        <link rel = "icon" href = "{% static 'media\pexels-anni-roenkae-5278835 small square.jpg' %}" />
-
-        <!-- END FAVICON -->
-
-        <title>Test Django blog 2</title>        
-
-    </head>
-
-    <body>
-
-        <header class = "page-header">
-
-            <img class = "logo" src = "{% static 'media\pexels-anni-roenkae-5278835 banner.jpg' %}" alt = "Profile photo" />
-
-			<nav>
-
-                 <h1><a href="/">Test Django Blog</a></h1>
-
-				 <!-- Add # in front of link definitions for same-page nav links. -->
-				<ul>
-					<li><a href = "index.html">Home</a></li>
-					<li><a href = "#about">About</a></li>
-					<li><a href = "#services">Services</a></li>
-					<li><a href = "#news">News</a></li>
-					<li><a href = "#contact">Contact</a></li>
-				</ul>
-
-			</nav>
-
-		</header>
-
-		<main class = "container">
-
-            <div class = "row">
-
-                <div class = "col">
-
-                    {% for post in posts %}
-                        <article class = "post">
-                            <h2><a href = "">{{ post.title }}</a></h2>
-                            <p>{{ post.text|linebreaksbr }}</p>
-                            <time>published: {{ post.published_date }}</time>
-                        </article>
-                    {% endfor %}
-
-                </div>
-
-            </div>
-
-		</main>
-
-		<footer>
-			<p>&copy;2024 Tracy Hockenhull, All rights reserved.</p>
-		</footer>
-
-    </body>
-</html>
+{% block content %}
+    {% for post in posts %}
+        <article class = "post">
+            <!-- <h2><a href="">{{ post.title }}</a></h2> -->
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+            <time>published: {{ post.published_date }}</time>
+        </article>
+    {% endfor %}
+{% endblock %}
