--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -31,17 +31,23 @@
 
                 <div class = "container">
 
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'post_new' %}" class="top-menu">
+                            {% include './icons/file-earmark-plus.svg' %}
+                        </a>
+                    {% endif %}
+
                     <h1><a href="/">Test Django Blog</a></h1>
 
                     <!-- Add # in front of link definitions for same-page nav links. -->
                     <ul>
-                        <li><a href = "index.html">Home</a></li>
-                        <li><a href = "#about">About</a></li>
-                        <li><a href = "#services">Services</a></li>
-                        <li><a href = "#news">News</a></li>
-                        <li><a href = "#contact">Contact</a></li>
+                        <li><a href = "/">Home</a></li>
+                        <li><a href = "/#about">About</a></li>
+                        <li><a href = "/#services">Services</a></li>
+                        <li><a href = "/#news">News</a></li>
+                        <li><a href = "/#contact">Contact</a></li>
                     </ul>
-                    
+
                 </div>
 
 			</nav>
